<resources>
    <string name="app_name">exercise</string>
    <string name="TodoApp">Todo App</string>
    <string name="hasil">Hasil Task</string>
    <string name="Selamat_Datang">Selamat Datang Todo App</string>
    <string name="idname">Nama</string>
    <string name="msname">Masukkan Nama</string>
    <string name="idpassword">Password</string>
    <string name="msPassword">Masukkan Password</string>
    <string name="idsignin">Sign-In</string>
    <string name="idtodo">New to Todo App ?</string>
    <string name="idregister">Register</string>
    <string name="msregister">Register</string>
    <string name="inama">Nama</string>
    <string name="renama">Masukkan Nama</string>
    <string name="iemail">Email</string>
    <string name="reemail">Masukkan Email</string>
    <string name="ipassword">password</string>
    <string name="repassword">Masukkan Password</string>
    <string name="repass">Re-Password</string>
    <string name="rerpass">Masukkan Password</string>
    <string name="isignup">Sign-Up</string>
    <string name="idselamat_datang">Selamat Datang</string>
    <string name="idnamalogin">Pascal</string>
    <string name="idjudultask">Task</string>
    <string name="idtask">Task</string>
    <string name="id_task">Masukkan Task</string>
    <string name="idjenistask">Jenis Task</string>
    <string name="id_jenistask">Masukkan Jenis Task</string>
    <string name="id_timetask">Time Task</string>
    <string name="re_timetask">Masukkan Lama Task</string>
    <string name="idfab">FAB</string>
    <string name="inamatask">Hasil Nama Task</string>
    <string name="ijenistask">Hasil Jenis Task</string>
    <string name="itimetask">Hasil Time Task</string>
    <string name="idsubmit">Submit</string>
    <string name="idlogout">Logout</string>
</resources>